k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sureflights-staging
  labels:
    name: sureflights-staging
    environment: staging
